HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodDuplicate/Expected.uv
//! Expected diagnostic metadata for the RecordMethodDuplicate rejected-source specimen.

expectedDiagnostic("E-SEM-3012", "rule.15.Record-Method-Dup")
